apps/weave-gitops/ingress-weave-gitops.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ww-gitops
  namespace: flux-system
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - weave.themisha.dev
  rules:
    - host: weave.themisha.dev
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: ww-gitops
                port:
                  number: 9001
